Plugin modules can now have help links on the virtual server creation and editing pages.
Added caching to make lookups of domains by parent and user faster.
---- Changes since 3.37 ----
When configuring email notification for new mailboxes and domains, you can now enter a Bcc address as well as a Cc address.
Moved options for sending email to new and updated mailboxes from the Module Config page to the form for editing the actual messages.
Domain owners who cannot login via SSH are automatically added to the deniedssh group, which the SSH server is configured to deny even before checking their shell.
---- Changes since 3.38 ----
Added the --template option to modify-domain.pl.
Fixed the Change Password link.
Added the Upgrade to Virtualmin Pro link on the left menu under System Settings for easily upgrading to the Pro version.
Re-factored all code for displaying quota fields, so that the text box is greyed out when 'Unlimited' is selected.
Added Prev/Next buttons to template form, for easily navigating through sections.
Added the ability to migrate cPanel and Ensim backups as Virtualmin domains. This feature was originally in the Pro version only, but has now been backported to the GPL release.
Change the Module Config option for new domain passwords to add an option to require the password to be entered twice.
Added a Module Config option for a Unix group to add all domain owners to.
---- Changes since 3.39 ----
If a domain with the same TLD already exists as one you are creating, the automatically generated group name will be the new full domain name, to avoid clashes.
The stats web directory is now password-protected by default.
Backported the server template setting for disabled website HTML from the Pro version of Virtualmin.
The number of days to keep old bandwidth data can now be configured on the Bandwidth Monitoring page.
Added the list-features.pl script, for finding available features for new virtual servers.